--- a/mylibrary/static/css/custom.css
+++ b/mylibrary/static/css/custom.css
@@ -12,3 +12,16 @@
 input[type=select]{
     width: 100% !important;
 }
+
+.mt-27{
+    margin-top: 27px;
+}
+
+.mt-20{
+    margin-top: 20px !important;
+}
+
+.profile-panel{
+    color: #5bc0de;
+    font-weight: bold;
+}
