1. Management Views restricted by using decorators 2. Managements templates seperated by folder

--- a/mylibrary/static/css/custom.css
+++ b/mylibrary/static/css/custom.css
@@ -29,3 +29,8 @@ input[type=select]{
 .min-height-80{
     min-height: 80vh;
 }
+@media only screen and (min-width: 768px){
+    #booklist-image{
+        height: 400px;
+    }
+}
