--- a/templates/books.html
+++ b/templates/books.html
@@ -16,7 +16,7 @@
                                         
                                         {% for book in books %}   
                                             <li>
-                                                <figure>
+                                                <figure id="booklist-image">
                                                     <img src="{{book.photo.url}}" alt="Book">
                                                     <figcaption>
                                                         <p><strong>{{book.name}}</strong></p>
