--- a/templates/management/book_list.html
+++ b/templates/management/book_list.html
@@ -10,13 +10,13 @@
                     <div class="container mt-4 mvh-100 mt-30">
                         <div class="row">
                             <div class="col-md-12">
-                                <h3 class="text-center"> All the Books in our lirary <a class="text-success" href=""><i class="fa fa-plus-square"></i></a></h3>
+                                <h3 class="text-center"> All the Books in our lirary <a class="text-success" style="font-size: 24px; color: Dodgerblue;" href="{% url 'book-add' %}"><i class="fa fa-plus-square"></i></a></h3>
                                 <hr>
                                 <table class="table table-bordered shop_table cart table-hover mt-27">
                                     <thead>
                                         <tr class="bg-info">
                                             <th class="product-name">Serial</th>
-                                            <th class="product-name">Book Name</th>
+                                            <th class="product-name">Book Nam </th>
                                             <th class="product-name">Author</th>
                                             <th class="product-price">Publisher </th>
                                             <th class="product-quantity">Availability</th>
@@ -24,7 +24,6 @@
                                     </thead>
                                     <tbody>
                                        
-                                    {% comment %} {% with index=1 %} {% endcomment %}
                                         {% for book in books %}
                                         <tr class="cart_item">                 
                                             
@@ -38,9 +37,17 @@
                                                 
                                            
                                             <td>
-                                            {{book.name}}
+                                                <a class="text-success" style="color: Dodgerblue;" href="{% url 'book-update' book.id %}">
+                                                    <i class="fa fa-edit"></i>
+                                                </a>
+                                                {{book.name}}
                                             </td>
-                                            <td>{{book.author}}</td>
+                                            <td>
+                                                <a class="text-success" style="color: Dodgerblue;" href="{% url 'author-update' book.author.id %}">
+                                                    <i class="fa fa-edit"></i>
+                                                </a>
+                                                {{book.author}}
+                                            </td>
                                             <td>{{book.publisher}}</td>
                                            
                                             {% if book.stock_availability %}
@@ -51,17 +58,12 @@
                                                 
                                                 </td>
                                             {% else %}
-                                                <td class="text-light bg-danger"> <i class="fa fa-times-circle"></i>  </td>
+                                                <td class="text-light bg-warning"> <i class="fa fa-times-circle"></i>  </td>
                                             {% endif %}
                                                 
                                             
                                         </tr>
-                                        {% endfor %}    
-                                    {% comment %} {% endwith %} {% endcomment %}
-                                    
-                                    {% comment %} {% for n in range(books| length) %}
-                                    'HI'
-                                   {% endfor %} {% endcomment %}
+                                        {% endfor %}
                                         
 
                                     </tbody>
