--- a/templates/management/mgt_generic.html
+++ b/templates/management/mgt_generic.html
@@ -10,7 +10,7 @@
                     <div class="container mt-4 mvh-100 mt-30">
                         <div class="row">
                             <div class="col-md-12">
-                                <h3 class="text-center"> Add Book in our lirary <a class="text-success" style="font-size: 24px; color: Dodgerblue;" href="{% url 'all_books' %}"><i class="fa fa-book"></i></a></h3>
+                                <h3 class="text-center"><a class="text-success" style="font-size: 24px; color: Dodgerblue;" href="{% url 'all_books' %}"><i class="fa fa-arrow-left"></i></a> Add to the lirary </h3>
                                 <hr>
                                 <div class="col-md-2"></div>
                                 <div class="col-md-8 custom-style-form">
