--- a/templates/general_template.html
+++ b/templates/general_template.html
@@ -71,9 +71,9 @@
                                 <ul class="nav navbar-nav">
                                     <li><a href="/">Home</a></li>
                                     <li><a href="/books">Books</a></li>
-                                    <li><a href="/books">Authos</a></li>
-                                    <li><a href="/books">Pulications</a></li>
-                                    <li><a href="/books">Catalogs</a></li>
+                                    <li><a href="{% url 'authors' %}">Authos</a></li>
+                                    <li><a href="{% url 'publisher' %}">Pulications</a></li>
+                                    <li><a href="{% url 'catalog' %}">Catalogs</a></li>
                                     
                                 </ul>
                                 <!-- Header Topbar -->
