--- a/templates/books.html
+++ b/templates/books.html
@@ -53,14 +53,40 @@
                                     <nav class="navigation pagination text-center">
                                         <h2 class="screen-reader-text">Posts navigation</h2>
                                         <div class="nav-links">
-                                            <a class="prev page-numbers" href="#."><i class="fa fa-long-arrow-left"></i> Previous</a>
-                                            <a class="page-numbers" href="#.">1</a>
-                                            <span class="page-numbers current">2</span>
-                                            <a class="page-numbers" href="#.">3</a>
-                                            <a class="page-numbers" href="#.">4</a>
-                                            <a class="next page-numbers" href="#.">Next <i class="fa fa-long-arrow-right"></i></a>
+
+                                            {% if page_obj.has_previous %}
+                                                    <a class="prev page-numbers" href="?page={{ page_obj.previous_page_number }}"><i class="fa fa-long-arrow-left"></i> Previous</a>
+                                            {% endif %}
+
+                                            {% for i in paginator.page_range %}
+                                                <span class="paginate_button page-item  {% if page_obj.number == i %}active{% endif %}">
+                                                    <a class="page-numbers {% if page_obj.number == i %}current{% endif %}" href="?page={{ i }}" aria-controls="report-table">{{i}}</a>
+                                                </span>
+                                            {% endfor %}
+
+                                            {% if page_obj.has_next %}
+                                                    <a class="next page-numbers" href="?page={{ page_obj.next_page_number }}">Next <i class="fa fa-long-arrow-right"></i></a>
+                                            {% endif %}
                                         </div>
                                     </nav>
+
+                                        <div class="pagination">
+                                            <span class="step-links">
+                                                <span class="current">
+                                                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                                                </span>
+
+                                                {% if page_obj.has_previous %}
+                                                    <a href="?page=1"><strong>&laquo; first </strong></a>
+                                                {% endif %}
+                                                {% if page_obj.has_next %}
+                                                    <a href="?page={{ page_obj.paginator.num_pages }}"> <strong> last </strong> &raquo;</a>
+                                                {% endif %}
+                                            </span>
+                                        </div>
+
+
+
                                 </div>
                                 <div class="col-md-3 col-md-pull-9">
                                     <aside id="secondary" class="sidebar widget-area" data-accordion-group>
@@ -73,25 +99,25 @@
                                                         <div class="form-row">
                                                             <div class="col">
                                                                 <label for="">Catelog</label>
-                                                                <p> {{book_filter.form.genre}} </p>
+                                                                <p> {{filtered_items.form.genre}} </p>
                                                             </div>
                                                         </div>
                                                         <div class="form-row">
                                                             <div class="col">
                                                                 <label for="">Author</label>
-                                                                <p> {{book_filter.form.author}} </p>
+                                                                <p> {{filtered_items.form.author}} </p>
                                                             </div>
                                                         </div>
                                                         <div class="form-row">
                                                             <div class="col">
                                                                 <label for="">Publisher</label>
-                                                                <p> {{book_filter.form.publisher}} </p>
+                                                                <p> {{filtered_items.form.publisher}} </p>
                                                             </div>
                                                         </div>
                                                         <div class="form-row">
                                                             <div class="col">
                                                                 <label for="">Language</label>
-                                                                <p> {{book_filter.form.language}} </p>
+                                                                <p> {{filtered_items.form.language}} </p>
                                                             </div>
                                                         </div>
                                                         <button type="submit" class="btn btn-info">Search</button>
