--- a/templates/books.html
+++ b/templates/books.html
@@ -55,17 +55,17 @@
                                         <div class="nav-links">
 
                                             {% if page_obj.has_previous %}
-                                                    <a class="prev page-numbers" href="?page={{ page_obj.previous_page_number }}"><i class="fa fa-long-arrow-left"></i> Previous</a>
+                                                    <a class="prev page-numbers" href="{{ request.get_full_path }}?&page={{ page_obj.previous_page_number }}"><i class="fa fa-long-arrow-left"></i> Previous</a>
                                             {% endif %}
 
                                             {% for i in paginator.page_range %}
                                                 <span class="paginate_button page-item  {% if page_obj.number == i %}active{% endif %}">
-                                                    <a class="page-numbers {% if page_obj.number == i %}current{% endif %}" href="?page={{ i }}" aria-controls="report-table">{{i}}</a>
+                                                    <a class="page-numbers {% if page_obj.number == i %}current{% endif %}" href="{{ request.get_full_path }}?&page={{ i }}" aria-controls="report-table">{{i}}</a>
                                                 </span>
                                             {% endfor %}
 
                                             {% if page_obj.has_next %}
-                                                    <a class="next page-numbers" href="?page={{ page_obj.next_page_number }}">Next <i class="fa fa-long-arrow-right"></i></a>
+                                                    <a class="next page-numbers" href="{{ request.get_full_path }}?&page={{ page_obj.next_page_number }}">Next <i class="fa fa-long-arrow-right"></i></a>
                                             {% endif %}
                                         </div>
                                     </nav>
@@ -77,10 +77,10 @@
                                                 </span>
 
                                                 {% if page_obj.has_previous %}
-                                                    <a href="?page=1"><strong>&laquo; first </strong></a>
+                                                    <a href="{{ request.get_full_path }}?&page=1"><strong>&laquo; first </strong></a>
                                                 {% endif %}
                                                 {% if page_obj.has_next %}
-                                                    <a href="?page={{ page_obj.paginator.num_pages }}"> <strong> last </strong> &raquo;</a>
+                                                    <a href="{{ request.get_full_path }}?&page={{ page_obj.paginator.num_pages }}"> <strong> last </strong> &raquo;</a>
                                                 {% endif %}
                                             </span>
                                         </div>
